fix: progress border visible on Firefox

--- a/src/app/slideshow-footer/slideshow-footer.component.scss
+++ b/src/app/slideshow-footer/slideshow-footer.component.scss
@@ -21,6 +21,7 @@
   left: 0;
   width: 100%;
   height: 1px;
+  border: none;
 
   // Gecko
   background-color: $background-color;
